--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "web-ext": "^6.6.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@material/drawer": "^14.0.0",
+    "@mui/material": "^5.8.5",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
     "webextension-polyfill": "^0.9.0"
   }
 }
