--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "web-ext": "^6.6.0"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@worldcoin/id": "^0.3.0",
+    "buffer": "^6.0.3",
+    "lit-ceramic-sdk": "^1.1.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "stream-browserify": "^3.0.0",
     "webextension-polyfill": "^0.9.0"
   }
 }
